--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
-Django==1.10
+astroid==2.2.5
+Django==2.1
 django-cors-middleware==1.2.0
-django-extensions==1.7.1
-djangorestframework==3.4.4
+django-extensions==2.1.6
+djangorestframework==3.9.2
+isort==4.3.17
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
 PyJWT==1.4.2
+pylint==2.3.1
+pytz==2019.1
 six==1.10.0
+sqlparse==0.3.0
+typed-ast==1.3.4
+wrapt==1.11.1
