--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 astroid==2.2.5
+coverage==4.5.3
 Django==2.1
 django-cors-middleware==1.2.0
 django-extensions==2.1.6
@@ -6,6 +7,9 @@ djangorestframework==3.9.2
 isort==4.3.17
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
+pep8==1.7.1
+psycopg2==2.8.2
+psycopg2-binary==2.8.2
 PyJWT==1.4.2
 pylint==2.3.1
 pytz==2019.1
@@ -13,4 +17,3 @@ six==1.10.0
 sqlparse==0.3.0
 typed-ast==1.3.4
 wrapt==1.11.1
-coverage==4.5.3
