--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,19 @@ services:
 env:
   - DJANGO=2.1.7
 
+before_install:
+  #include environment variables to be exported
+
 install:
   - pip install -r requirements.txt
-  - pip install coveralls
 
 before_script:
-  # - psql -c 'create database ah-the-jedi;' -U postgres
+  - psql -c 'create database ah_the_jedi;' -U postgres
 
 script:
   - python manage.py makemigrations
   - python manage.py migrate
   - python manage.py test
+
+after_success:
+  - coveralls
