--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
 
 install:
   - pip install -r requirements.txt
+  - pip install coveralls
 
 before_script:
   # - psql -c 'create database ah-the-jedi;' -U postgres
