[Delivers #165305248] Hosted with Heroku

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ script:
   - python manage.py makemigrations
   - python manage.py migrate
   - python manage.py test
+  - coverage run --source=authors manage.py test
+  - python -m coverage report -m
 
 after_success:
   - coveralls
