--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,14 @@ coreapi==2.3.3
 coreschema==0.0.4
 Django==2.1
 django-cors-middleware==1.2.0
+django-environ==0.4.5
 django-extensions==2.1.6
 django-rest-swagger==2.1.2
 djangorestframework==3.9.2
 idna==2.8
 django-mailer==1.2.6
+djangorestframework-jwt==1.11.0
+gunicorn==19.9.0
 isort==4.3.17
 itypes==1.1.0
 Jinja2==2.10.1
@@ -36,5 +39,4 @@ uritemplate==3.0.0
 urllib3==1.24.2
 wrapt==1.11.1
 whitenoise==4.1.2
-gunicorn==19.9.0
-django-environ==0.4.5
+wrapt==1.11.1
