--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ Jinja2==2.10.1
 jsonfield==2.0.2
 lazy-object-proxy==1.3.1
 lockfile==0.12.2
+mailer==0.8.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
 mock==2.0.0
@@ -47,8 +48,8 @@ psycopg2-binary==2.8.2
 pyasn1==0.4.5
 pyasn1-modules==0.2.5
 pycodestyle==2.5.0
+PyJWT==1.7.1
 pyflakes==2.1.1
-PyJWT==1.4.2
 pylint==2.3.1
 pylint-django==2.0.8
 pylint-plugin-utils==0.5
