[Finishes #165305266] implemented create article CRUD

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,11 +1,19 @@
-[report]
+[run]
 omit = 
     *migrations*
     *tests*
     config/*
     test/*
     manage.py
-    authors/apps/profiles/utils.py 
+    authors/apps/articles/utils.py
     authors/wsgi.py 
     authors/apps/profiles/permissions.py 
     authors/apps/profiles/apps.py
+    authors/apps/articles/apps.py
+
+[report]
+exclude_lines =
+    pragma: no cover
+    def __repr__
+    return "{}".format(self.title)
+    return self.user.username
