feat(profile): create user profile - add user profile tests - add profile model - add migrations - format view with pep8 standards - add profile view - add profile urls - register profile urls - add serializers - add renderers - add response messages - add permission classes - configure permission classes - add image uploader and validations - update app dependencies - update .env-example file - ignore coverage for utils, wsgi, permission, apps files [Finishes #165305265]

--- a/.coveragerc
+++ b/.coveragerc
@@ -5,4 +5,7 @@ omit =
     config/*
     test/*
     manage.py
-    
+    authors/apps/profiles/utils.py 
+    authors/wsgi.py 
+    authors/apps/profiles/permissions.py 
+    authors/apps/profiles/apps.py
