--- a/.env_example
+++ b/.env_example
@@ -6,3 +6,6 @@ DB_HOST=''
 DOMAIN='localhost:8000'
 EMAIL_HOST_USER='<your email here>'
 EMAIL_HOST_PASSWORD='<Your password here>'
+CLOUDINARY_CLOUD_NAME='cloudinary-name'
+CLOUDINARY_API_KEY='cloudinary-api-key'
+CLOUDINARY_API_SECRET='cloudinary-api-secret'
