--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,38 @@
 astroid==2.2.5
-coverage==4.5.3
+autopep8==1.4.4
 certifi==2019.3.9
 chardet==3.0.4
+cloudinary==1.15.0
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==4.5.3
 Django==2.1
 django-cors-middleware==1.2.0
 django-environ==0.4.5
 django-extensions==2.1.6
+django-mailer==1.2.6
 django-rest-swagger==2.1.2
 djangorestframework==3.9.2
-idna==2.8
-django-mailer==1.2.6
 djangorestframework-jwt==1.11.0
 gunicorn==19.9.0
+idna==2.8
 isort==4.3.17
 itypes==1.1.0
 Jinja2==2.10.1
 lazy-object-proxy==1.3.1
-MarkupSafe==1.1.1
 lockfile==0.12.2
+MarkupSafe==1.1.1
 mccabe==0.6.1
+mock==2.0.0
 nose==1.3.7
+openapi-codec==1.3.2
+pbr==5.1.3
 pep8==1.7.1
+Pillow==6.0.0
 psycopg2==2.8.2
 psycopg2-binary==2.8.2
-openapi-codec==1.3.2
-PyJWT==1.4.2
+pycodestyle==2.5.0
+PyJWT==1.7.1
 pylint==2.3.1
 python-http-client==3.1.0
 pytz==2019.1
@@ -37,6 +43,5 @@ sqlparse==0.3.0
 typed-ast==1.3.4
 uritemplate==3.0.0
 urllib3==1.24.2
-wrapt==1.11.1
 whitenoise==4.1.2
 wrapt==1.11.1
