--- a/.env_example
+++ b/.env_example
@@ -9,3 +9,9 @@ EMAIL_HOST_PASSWORD='<Your password here>'
 CLOUDINARY_CLOUD_NAME='<cloudinary-name-here>'
 CLOUDINARY_API_KEY='<cloudinary-api-key-here>'
 CLOUDINARY_API_SECRET='<cloudinary-secret-key-here>'
+SOCIAL_AUTH_TWITTER_KEY=''
+SOCIAL_AUTH_TWITTER_SECRET=''
+SOCIAL_AUTH_FACEBOOK_APP_ID=''
+SOCIAL_AUTH_FACEBOOK_SECRET=''
+GOOGLE_CLIENT_ID=''
+GOOGLE_CLIENT_SECRET=''
