--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,30 @@
 astroid==2.2.5
 autopep8==1.4.4
+beautifulsoup4==4.7.1
+cachetools==3.1.0
 certifi==2019.3.9
 chardet==3.0.4
 cloudinary==1.15.0
 coreapi==2.3.3
 coreschema==0.0.4
 coverage==4.5.3
+defusedxml==0.6.0
 Django==2.1
 django-autoslug-iplweb==1.9.4
+django-braces==1.13.0
 django-cors-middleware==1.2.0
 django-environ==0.4.5
 django-extensions==2.1.6
 django-mailer==1.2.6
+django-oauth-toolkit==1.2.0
+django-rest-framework-social-oauth2==1.1.0
 django-rest-swagger==2.1.2
 djangorestframework==3.9.2
 djangorestframework-jwt==1.11.0
 entrypoints==0.3
 flake8==3.7.7
+google==2.0.2
+google-auth==1.6.3
 gunicorn==19.9.0
 idna==2.8
 isort==4.3.17
@@ -29,12 +37,15 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 mock==2.0.0
 nose==1.3.7
+oauthlib==3.0.1
 openapi-codec==1.3.2
 pbr==5.1.3
 pep8==1.7.1
 Pillow==6.0.0
 psycopg2==2.8.2
 psycopg2-binary==2.8.2
+pyasn1==0.4.5
+pyasn1-modules==0.2.5
 pycodestyle==2.5.0
 pyflakes==2.1.1
 PyJWT==1.4.2
@@ -42,13 +53,20 @@ pylint==2.3.1
 pylint-django==2.0.8
 pylint-plugin-utils==0.5
 python-http-client==3.1.0
+python3-openid==3.1.0
 pytz==2019.1
 requests==2.21.0
+requests-oauthlib==1.2.0
+rsa==4.0
 simplejson==3.16.0
 six==1.10.0
+social-auth-app-django==3.1.0
+social-auth-core==3.1.0
+soupsieve==1.9.1
 sqlparse==0.3.0
 typed-ast==1.3.4
 uritemplate==3.0.0
-urllib3==1.25.1
+urllib3==1.24.2
+Werkzeug==0.15.2
 whitenoise==4.1.2
 wrapt==1.11.1
