feat(follow): Users follow each other
- add user follow tests
- add follows app
- add follow model
- add migrations
- add follow views
- add follow urls
- register follow urls
- add follow serializers
- add response messages
- add follow status to profile serializer
- add utility validations
- add apps.py to coverage ignore
[Finishes #165305270]

--- a/.coveragerc
+++ b/.coveragerc
@@ -10,6 +10,8 @@ omit =
     authors/apps/profiles/permissions.py
     authors/apps/profiles/apps.py
     authors/apps/articles/apps.py
+    authors/apps/follows/apps.py
+    
 
 [report]
 exclude_lines =
