feat(ratings): implement user can rate an article - ensure user can only rate articles authored by authors - ensure only authenticated users can rate an article - calculate the average rating of an article - implement functionality to update rating if user has already rated an article - include the average rating of an article in the object returned by an article - add unit tests [Delivers #165305267]

--- a/.coveragerc
+++ b/.coveragerc
@@ -11,6 +11,7 @@ omit =
     authors/apps/profiles/apps.py
     authors/apps/articles/apps.py
     authors/apps/follows/apps.py
+    authors/apps/ratings/apps.py
     
 
 [report]
