--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ django-cors-middleware==1.2.0
 django-crispy-forms==1.7.2
 django-environ==0.4.5
 django-extensions==2.1.6
+django-filter==2.1.0
 django-fluent-comments==2.1
 django-mailer==1.2.6
 django-oauth-toolkit==1.2.0
