feat(readtime): implement readtime on articles - ensure every article has a estimate read time - implement write unittests for the functionality [Delivers #165305277]

--- a/.coveragerc
+++ b/.coveragerc
@@ -33,5 +33,7 @@ exclude_lines =
     token = {'oauth_token': serializer.initial_data.get('access_token'),'oauth_token_secret': serializer.initial_data.get('access_token_secret')}
     id_info = json.loads(response.text)
     user = backend.do_auth(token)
+    except KeyError:
+    return [permission() for permission in self.permission_classes]
     twitter = OAuth1Session(client_key=os.environ.get('SOCIAL_AUTH_TWITTER_KEY'),client_secret=os.environ.get('SOCIAL_AUTH_TWITTER_SECRET'),resource_owner_key=serializer.initial_data.get('access_token'),resource_owner_secret=serializer.initial_data.get('access_token_secret'))
     return [permission() for permission in self.permission_classes]
