--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,9 @@ cloudinary==1.15.0
 coreapi==2.3.3
 coreschema==0.0.4
 coverage==4.5.3
+cssselect==1.0.3
 defusedxml==0.6.0
-Django==2.1
+Django==2.2
 django-autoslug-iplweb==1.9.4
 django-braces==1.13.0
 django-contrib-comments==1.9.1
@@ -40,7 +41,9 @@ Jinja2==2.10.1
 jsonfield==2.0.2
 lazy-object-proxy==1.3.1
 lockfile==0.12.2
+lxml==4.3.3
 mailer==0.8.1
+markdown2==2.3.7
 MarkupSafe==1.1.1
 mccabe==0.6.1
 mock==2.0.0
@@ -60,10 +63,12 @@ PyJWT==1.4.2
 pylint==2.3.1
 pylint-django==2.0.8
 pylint-plugin-utils==0.5
+pyquery==1.4.0
 python-akismet==0.4.1
 python-http-client==3.1.0
 python3-openid==3.1.0
 pytz==2019.1
+readtime==1.1.1
 requests==2.21.0
 requests-oauthlib==1.2.0
 rsa==4.0
