feat(highlights): implement user should be able to highlight articles - add functionality for users to highlight any text and comment on it - write tests for highlighting articles [Delivers #165305281]

--- a/.coveragerc
+++ b/.coveragerc
@@ -12,6 +12,7 @@ omit =
     authors/apps/articles/apps.py
     authors/apps/follows/apps.py
     authors/apps/ratings/apps.py
+    authors/apps/highlights/apps.py
     
 
 [report]
