feat(notifications): Users receive notifications
    - add user notification tests
    - register application
    - add response error messages
    - add notification view
    - add notification models
    - add signals in actions
    - add serializers
    - add html template
    - add utility validations
    - add apps.py to coverage ignore

    [Finishes #165305272]

--- a/.coveragerc
+++ b/.coveragerc
@@ -12,6 +12,7 @@ omit =
     authors/apps/articles/apps.py
     authors/apps/follows/apps.py
     authors/apps/ratings/apps.py
+    authors/apps/notifications/apps.py
     
 
 [report]
@@ -22,6 +23,7 @@ exclude_lines =
     return serializer.data
     return "{}".format(self.title)
     return self.user.username
+    return self.message
     return Response(status=status.HTTP_200_OK, data=response)
     response = {"email": id_info['email'],"username": user.username,"token": token}
     if user and user.is_active:
