feat(highlights): implement user should be able to highlight and comment on article - add functionality for users to highlight any text and comment on it - write tests for highlighting articles [Delivers #165305281]

--- a/.coveragerc
+++ b/.coveragerc
@@ -13,7 +13,7 @@ omit =
     authors/apps/follows/apps.py
     authors/apps/ratings/apps.py
     authors/apps/notifications/apps.py
-    
+    authors/apps/highlights/apps.py
 
 [report]
 exclude_lines =
