--- a/.coveragerc
+++ b/.coveragerc
@@ -14,6 +14,9 @@ omit =
     authors/apps/ratings/apps.py
     authors/apps/notifications/apps.py
     authors/apps/highlights/apps.py
+    authors/apps/notifications/utils.py 
+    authors/apps/profiles/utils.py
+    
 
 [report]
 exclude_lines =
