--- a/.coveragerc
+++ b/.coveragerc
@@ -16,7 +16,7 @@ omit =
     authors/apps/highlights/apps.py
     authors/apps/notifications/utils.py 
     authors/apps/profiles/utils.py
-    
+    authors/apps/reports/apps.py
 
 [report]
 exclude_lines =
@@ -42,3 +42,4 @@ exclude_lines =
     return [permission() for permission in self.permission_classes]
     twitter = OAuth1Session(client_key=os.environ.get('SOCIAL_AUTH_TWITTER_KEY'),client_secret=os.environ.get('SOCIAL_AUTH_TWITTER_SECRET'),resource_owner_key=serializer.initial_data.get('access_token'),resource_owner_secret=serializer.initial_data.get('access_token_secret'))
     return [permission() for permission in self.permission_classes]
+    for report in serializer.data:
