--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Django==2.2
 django-autoslug-iplweb==1.9.4
 django-braces==1.13.0
 django-contrib-comments==1.9.1
+django-cors-headers==3.0.1
 django-cors-middleware==1.2.0
 django-crispy-forms==1.7.2
 django-environ==0.4.5
